--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,13 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+virtAssist/pyvenv.cfg
+virtAssist/Scripts/activate
+virtAssist/Scripts/activate.bat
+virtAssist/Scripts/Activate.ps1
+virtAssist/Scripts/deactivate.bat
+virtAssist/Scripts/pip.exe
+virtAssist/Scripts/pip3.10.exe
+virtAssist/Scripts/pip3.exe
+virtAssist/Scripts/python.exe
+virtAssist/Scripts/pythonw.exe
